# rulepath

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  progress.md  rust-toolchain.toml
crates/wasm-api/: Cargo.toml
crates/wasm-api/src/: action_path.rs  action_tree.rs  actors.rs  catalog.rs  commands.rs  constants.rs  games.rs  json.rs  json_parse.rs  lib.rs  replay.rs  seats.rs  store.rs  tests.rs  wasm_abi.rs
crates/wasm-api/tests/: api_surface.rs
games/blackglass_pact/: Cargo.toml
games/blackglass_pact/benches/: blackglass_pact.rs  thresholds.json
games/blackglass_pact/data/: manifest.toml  variants.toml
games/blackglass_pact/docs/: AI.md  BENCHMARKS.md  BOT-STRATEGY-EVIDENCE-PACK.md  COMPETENT-PLAYER.md  GAME-EVIDENCE.md  GAME-IMPLEMENTATION-ADMISSION.md  MECHANICS.md  PRIMITIVE-PRESSURE-LEDGER.md  PUBLIC-RELEASE-CHECKLIST.md  RULE-COVERAGE.md  RULES.md  SOURCES.md  UI.md
games/blackglass_pact/src/: bidding.rs  bots.rs  cards.rs  effects.rs  ids.rs  lib.rs  partnerships.rs  replay_support.rs  rules.rs  scoring.rs  setup.rs  state.rs  ui.rs  variants.rs  visibility.rs
games/blackglass_pact/tests/: bots.rs  property.rs  replay.rs  rules.rs  serialization.rs  visibility.rs
games/event_frontier/: Cargo.toml
games/event_frontier/benches/: event_frontier.rs  thresholds.json
games/event_frontier/data/: action_affordance_templates.toml  cards.toml  cards_presentation.toml  manifest.toml  sites_presentation.toml  variants.toml
games/event_frontier/docs/: AI.md  BENCHMARKS.md  BOT-STRATEGY-EVIDENCE-PACK.md  COMPETENT-PLAYER.md  GAME-IMPLEMENTATION-ADMISSION.md  HOW-TO-PLAY.md  MECHANICS.md  PRIMITIVE-PRESSURE-LEDGER.md  PUBLIC-RELEASE-CHECKLIST.md  RULE-COVERAGE.md  RULES.md  SOURCES.md  UI.md
games/event_frontier/src/: actions.rs  bots.rs  cards.rs  effects.rs  ids.rs  lib.rs  replay_support.rs  rules.rs  setup.rs  state.rs  ui.rs  variants.rs  visibility.rs
games/event_frontier/tests/: bots.rs  golden_traces.rs  property.rs  replay.rs  rules.rs  serialization.rs  visibility.rs
games/frontier_control/: Cargo.toml
games/frontier_control/benches/: frontier_control.rs  thresholds.json
games/frontier_control/data/: manifest.toml  variants.toml
games/frontier_control/docs/: AI.md  BENCHMARKS.md  BOT-STRATEGY-EVIDENCE-PACK.md  COMPETENT-PLAYER.md  GAME-IMPLEMENTATION-ADMISSION.md  MECHANICS.md  PRIMITIVE-PRESSURE-LEDGER.md  PUBLIC-RELEASE-CHECKLIST.md  RULE-COVERAGE.md  RULES.md  SOURCES.md  UI.md
games/frontier_control/src/: actions.rs  bots.rs  effects.rs  ids.rs  lib.rs  replay_support.rs  rules.rs  setup.rs  state.rs  ui.rs  variants.rs  visibility.rs
games/frontier_control/tests/: bots.rs  property.rs  replay.rs  rules.rs  serialization.rs  visibility.rs
games/masked_claims/: Cargo.toml
games/masked_claims/benches/: masked_claims.rs  thresholds.json
games/masked_claims/data/: manifest.toml  variants.toml
games/masked_claims/docs/: AI.md  BENCHMARKS.md  BOT-STRATEGY-EVIDENCE-PACK.md  COMPETENT-PLAYER.md  GAME-IMPLEMENTATION-ADMISSION.md  HOW-TO-PLAY.md  MECHANICS.md  PRIMITIVE-PRESSURE-LEDGER.md  PUBLIC-RELEASE-CHECKLIST.md  RULE-COVERAGE.md  RULES.md  SOURCES.md  UI.md
games/masked_claims/src/: actions.rs  bots.rs  effects.rs  ids.rs  lib.rs  replay_support.rs  rules.rs  setup.rs  state.rs  ui.rs  variants.rs  visibility.rs
games/masked_claims/tests/: bots.rs  property.rs  replay.rs  rules.rs  serialization.rs  visibility.rs
games/meldfall_ledger/: Cargo.toml
games/meldfall_ledger/benches/: meldfall_ledger.rs  thresholds.json
games/meldfall_ledger/data/: manifest.toml  variants.toml
games/meldfall_ledger/docs/: AI.md  BENCHMARKS.md  BOT-STRATEGY-EVIDENCE-PACK.md  COMPETENT-PLAYER.md  GAME-EVIDENCE.md  GAME-IMPLEMENTATION-ADMISSION.md  HOW-TO-PLAY.md  MECHANICS.md  PRIMITIVE-PRESSURE-LEDGER.md  PUBLIC-RELEASE-CHECKLIST.md  RULE-COVERAGE.md  RULES.md  SOURCES.md  UI.md
games/meldfall_ledger/src/: actions.rs  bots.rs  cards.rs  effects.rs  ids.rs  lib.rs  replay_support.rs  rules.rs  scoring.rs  setup.rs  state.rs  ui.rs  variants.rs  visibility.rs
games/meldfall_ledger/tests/: bots.rs  property.rs  replay.rs  rules.rs  serialization.rs  visibility.rs
games/poker_lite/: Cargo.toml
games/poker_lite/benches/: poker_lite.rs  thresholds.json
games/poker_lite/data/: manifest.toml  variants.toml
games/poker_lite/docs/: AI.md  BENCHMARKS.md  BOT-STRATEGY-EVIDENCE-PACK.md  COMPETENT-PLAYER.md  GAME-IMPLEMENTATION-ADMISSION.md  HOW-TO-PLAY.md  MECHANICS.md  PRIMITIVE-PRESSURE-LEDGER.md  PUBLIC-RELEASE-CHECKLIST.md  RULE-COVERAGE.md  RULES.md  SOURCES.md  UI.md
games/poker_lite/src/: actions.rs  bots.rs  effects.rs  ids.rs  lib.rs  replay_support.rs  rules.rs  setup.rs  state.rs  ui.rs  variants.rs  visibility.rs
games/poker_lite/tests/: bots.rs  property.rs  replay.rs  rules.rs  serialization.rs  visibility.rs
games/race_to_n/: Cargo.toml
games/race_to_n/benches/: race_to_n.rs  thresholds.json
games/race_to_n/data/: manifest.toml  variants.toml
games/race_to_n/docs/: AI.md  BENCHMARKS.md  GAME-IMPLEMENTATION-ADMISSION.md  MECHANICS.md  RULE-COVERAGE.md  RULES.md  SOURCES.md  UI.md
games/race_to_n/src/: actions.rs  bots.rs  effects.rs  ids.rs  lib.rs  replay_support.rs  rules.rs  setup.rs  state.rs  ui.rs  variants.rs  visibility.rs
games/race_to_n/tests/: bot_tests.rs  property_tests.rs  replay_tests.rs  rule_tests.rs  serialization_tests.rs
games/secret_draft/: Cargo.toml
games/secret_draft/benches/: secret_draft.rs  thresholds.json
games/secret_draft/data/: manifest.toml  variants.toml
games/secret_draft/docs/: AI.md  BENCHMARKS.md  BOT-STRATEGY-EVIDENCE-PACK.md  COMPETENT-PLAYER.md  GAME-IMPLEMENTATION-ADMISSION.md  HOW-TO-PLAY.md  MECHANICS.md  PUBLIC-RELEASE-CHECKLIST.md  RULE-COVERAGE.md  RULES.md  SOURCES.md  UI.md
games/starbridge_crossing/: Cargo.toml
games/token_bazaar/: Cargo.toml
games/vow_tide/: Cargo.toml
tools/fixture-check/: Cargo.toml
tools/replay-check/: Cargo.toml
tools/seed-reducer/: Cargo.toml
tools/simulate/: Cargo.toml
tools/trace-viewer/: Cargo.toml
(+3072 files in other folders)
