[workspace]
resolver = "2"
members = [
    "crates/engine-core",
    "crates/game-stdlib",
    "crates/ai-core",
    "crates/wasm-api",
    "games/race_to_n",
    "games/three_marks",
    "games/column_four",
    "games/directional_flip",
    "games/draughts_lite",
    "games/high_card_duel",
    "games/secret_draft",
    "games/token_bazaar",
    "games/poker_lite",
    "games/plain_tricks",
    "games/masked_claims",
    "games/flood_watch",
    "games/frontier_control",
    "games/event_frontier",
    "tools/simulate",
    "tools/replay-check",
    "tools/trace-viewer",
    "tools/rule-coverage",
    "tools/bench-report",
    "tools/seed-reducer",
    "tools/fixture-check",
]

[workspace.package]
edition = "2021"
license = "GPL-3.0-or-later"
repository = "https://github.com/joeloverbeck/rulepath"
