[package]
name = "wasm-api"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ai-core = { path = "../ai-core" }
engine-core = { path = "../engine-core" }
race_to_n = { path = "../../games/race_to_n" }

[lib]
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]
