[package]
name = "blackglass_pact"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
engine-core = { path = "../../crates/engine-core" }
game-stdlib = { path = "../../crates/game-stdlib" }

[lib]
path = "src/lib.rs"
bench = false

[[bench]]
name = "blackglass_pact"
path = "benches/blackglass_pact.rs"
harness = false
