[package]
name = "frontier_control"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ai-core = { path = "../../crates/ai-core" }
engine-core = { path = "../../crates/engine-core" }
game-stdlib = { path = "../../crates/game-stdlib" }

[dev-dependencies]
game-test-support = { path = "../../crates/game-test-support" }

[lib]
path = "src/lib.rs"
bench = false

[[bench]]
name = "frontier_control"
path = "benches/frontier_control.rs"
harness = false
