[package]
name = "meldfall_ledger"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
engine-core = { path = "../../crates/engine-core" }
game-stdlib = { path = "../../crates/game-stdlib" }

[dev-dependencies]
game-test-support = { path = "../../crates/game-test-support" }

[lib]
path = "src/lib.rs"
bench = false
