[package]
name = "race_to_n"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ai-core = { path = "../../crates/ai-core" }
engine-core = { path = "../../crates/engine-core" }
game-stdlib = { path = "../../crates/game-stdlib" }

[dev-dependencies]
game-test-support = { path = "../../crates/game-test-support" }

[lib]
path = "src/lib.rs"

[[bench]]
name = "race_to_n"
harness = false
