[package]
name = "secret_draft"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ai-core = { path = "../../crates/ai-core" }
engine-core = { path = "../../crates/engine-core" }
game-stdlib = { path = "../../crates/game-stdlib" }

[lib]
path = "src/lib.rs"

[[bench]]
name = "secret_draft"
harness = false
