[package]
name = "fixture-check"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
column_four = { path = "../../games/column_four" }
directional_flip = { path = "../../games/directional_flip" }
draughts_lite = { path = "../../games/draughts_lite" }
race_to_n = { path = "../../games/race_to_n" }
three_marks = { path = "../../games/three_marks" }

[[bin]]
name = "fixture-check"
path = "src/main.rs"
