[package]
name = "fixture-check"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
briar_circuit = { path = "../../games/briar_circuit" }
column_four = { path = "../../games/column_four" }
directional_flip = { path = "../../games/directional_flip" }
draughts_lite = { path = "../../games/draughts_lite" }
event_frontier = { path = "../../games/event_frontier" }
flood_watch = { path = "../../games/flood_watch" }
frontier_control = { path = "../../games/frontier_control" }
high_card_duel = { path = "../../games/high_card_duel" }
masked_claims = { path = "../../games/masked_claims" }
poker_lite = { path = "../../games/poker_lite" }
plain_tricks = { path = "../../games/plain_tricks" }
race_to_n = { path = "../../games/race_to_n" }
river_ledger = { path = "../../games/river_ledger" }
secret_draft = { path = "../../games/secret_draft" }
three_marks = { path = "../../games/three_marks" }
token_bazaar = { path = "../../games/token_bazaar" }
vow_tide = { path = "../../games/vow_tide" }

[[bin]]
name = "fixture-check"
path = "src/main.rs"
