[package]
name = "seed-reducer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
directional_flip = { path = "../../games/directional_flip" }
race_to_n = { path = "../../games/race_to_n" }

[[bin]]
name = "seed-reducer"
path = "src/main.rs"
