[package]
name = "simulate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
ai-core = { path = "../../crates/ai-core" }
column_four = { path = "../../games/column_four" }
directional_flip = { path = "../../games/directional_flip" }
engine-core = { path = "../../crates/engine-core" }
race_to_n = { path = "../../games/race_to_n" }
three_marks = { path = "../../games/three_marks" }

[[bin]]
name = "simulate"
path = "src/main.rs"
