[package]
name = "trace-viewer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
directional_flip = { path = "../../games/directional_flip" }
engine-core = { path = "../../crates/engine-core" }
race_to_n = { path = "../../games/race_to_n" }

[[bin]]
name = "trace-viewer"
path = "src/main.rs"
